--- a/PKPhotoBrowser/PKPhotoBrowser/PhotoBrowser/View/PKPhotoCollectionCell.xib
+++ b/PKPhotoBrowser/PKPhotoBrowser/PhotoBrowser/View/PKPhotoCollectionCell.xib
@@ -22,6 +22,10 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XVL-O4-Rpc">
                         <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                     </imageView>
+                    <view hidden="YES" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0WK-ea-j2e">
+                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m8Z-gh-3fj">
                         <rect key="frame" x="59" y="1" width="20" height="20"/>
                         <state key="normal" backgroundImage="btn_unselected.png"/>
@@ -36,13 +40,18 @@
                 <constraint firstItem="m8Z-gh-3fj" firstAttribute="width" secondItem="XVL-O4-Rpc" secondAttribute="width" multiplier="1:4" id="6hD-if-pof"/>
                 <constraint firstAttribute="trailing" secondItem="XVL-O4-Rpc" secondAttribute="trailing" id="7jQ-78-Bc5"/>
                 <constraint firstItem="m8Z-gh-3fj" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="1" id="9Do-dN-n1d"/>
+                <constraint firstAttribute="bottom" secondItem="0WK-ea-j2e" secondAttribute="bottom" id="CiI-p0-tHK"/>
                 <constraint firstItem="XVL-O4-Rpc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="FAH-rv-jkT"/>
                 <constraint firstAttribute="trailing" secondItem="m8Z-gh-3fj" secondAttribute="trailing" constant="1" id="RoN-hb-xuu"/>
                 <constraint firstAttribute="bottom" secondItem="XVL-O4-Rpc" secondAttribute="bottom" id="XN6-8D-iAN"/>
+                <constraint firstItem="0WK-ea-j2e" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="cRF-Lw-rpK"/>
+                <constraint firstItem="0WK-ea-j2e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lbw-G6-pRP"/>
                 <constraint firstItem="XVL-O4-Rpc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="qia-eA-LSc"/>
+                <constraint firstAttribute="trailing" secondItem="0WK-ea-j2e" secondAttribute="trailing" id="sRw-jV-gbi"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <connections>
+                <outlet property="blurEffectView" destination="0WK-ea-j2e" id="oJY-vH-GG6"/>
                 <outlet property="imgView" destination="XVL-O4-Rpc" id="ysb-iI-bBn"/>
                 <outlet property="selectBtn" destination="m8Z-gh-3fj" id="vB2-sW-Kbs"/>
             </connections>
